--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
 	<ciManagement>
 		<system>Jenkins</system>
-		<url>http://jenkins.imagej.net/view/scifio-hdf5/</url>
+		<url>http://jenkins.imagej.net/job/scifio-hdf5/</url>
 	</ciManagement>
 
 	<repositories>
