--- a/pom.xml
+++ b/pom.xml
@@ -55,4 +55,18 @@
 		</dependency>
 	</dependencies>
 
+	<developers>
+		<developer>
+			<id>henrypinkard</id>
+			<name>Henry Pinkard</name>
+			<email>henry.pinkard@gmail.com</email>
+			<url></url>
+			<organization></organization>
+			<organizationUrl></organizationUrl>
+			<roles>
+				<role>developer</role>
+			</roles>
+			<timezone></timezone>
+		</developer>
+	</developers>
 </project>
