--- a/pom.xml
+++ b/pom.xml
@@ -75,8 +75,8 @@
 		<url>https://github.com/scifio/scifio-hdf5/issues</url>
 	</issueManagement>
 	<ciManagement>
-		<system>Jenkins</system>
-		<url>http://jenkins.imagej.net/job/scifio-hdf5/</url>
+		<system>Travis CI</system>
+		<url>https://travis-ci.org/scifio/scifio-hdf5</url>
 	</ciManagement>
 
 	<properties>
