POM: deploy releases to the ImageJ repository

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,9 @@
 		<license.copyrightOwners>UC Berkeley and Board of Regents of
 the University of Wisconsin-Madison.</license.copyrightOwners>
 		<license.projectName>SCIFIO library for reading and converting scientific file formats.</license.projectName>
+
+		<!-- NB: Deploy releases to the ImageJ Maven repository. -->
+		<releaseProfiles>deploy-to-imagej</releaseProfiles>
 	</properties>
 
 	<repositories>
