--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>26.0.0</version>
+		<version>28.0.0</version>
 		<relativePath />
 	</parent>
 
@@ -19,7 +19,7 @@
 	<inceptionYear>2011</inceptionYear>
 	<organization>
 		<name>SCIFIO</name>
-		<url>http://scif.io/</url>
+		<url>https://scif.io/</url>
 	</organization>
 	<licenses>
 		<license>
@@ -60,7 +60,7 @@
 	<mailingLists>
 		<mailingList>
 			<name>Image.sc Forum</name>
-			<archive>https://forum.image.sc/tags/scifio</archive>
+			<archive>https://forum.image.sc/tag/scifio</archive>
 		</mailingList>
 	</mailingLists>
 
@@ -82,14 +82,13 @@
 	<properties>
 		<package-name>io.scif.formats</package-name>
 		<license.licenseName>bsd_2</license.licenseName>
-		<license.copyrightOwners>UC Berkeley and Board of Regents of
-the University of Wisconsin-Madison.</license.copyrightOwners>
+		<license.copyrightOwners>SCIFIO developers.</license.copyrightOwners>
 		<license.projectName>SCIFIO library for reading and converting scientific file formats.</license.projectName>
 
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>deploy-to-scijava</releaseProfiles>
 
-		<scifio.version>0.38.0</scifio.version>
+		<scifio.version>0.39.1</scifio.version>
 	</properties>
 
 	<repositories>
