--- a/pom.xml
+++ b/pom.xml
@@ -75,8 +75,8 @@
 		<url>https://github.com/scifio/scifio-hdf5/issues</url>
 	</issueManagement>
 	<ciManagement>
-		<system>Travis CI</system>
-		<url>https://travis-ci.org/scifio/scifio-hdf5</url>
+		<system>GitHub Actions</system>
+		<url>https://github.com/scifio/scifio-hdf5/actions</url>
 	</ciManagement>
 
 	<properties>
@@ -86,7 +86,7 @@
 		<license.projectName>SCIFIO library for reading and converting scientific file formats.</license.projectName>
 
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
-		<releaseProfiles>deploy-to-scijava</releaseProfiles>
+		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 
 		<scifio.version>0.39.1</scifio.version>
 	</properties>
