--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
 	</mailingLists>
 
 	<scm>
-		<connection>scm:git:git://github.com/scifio/scifio-hdf5</connection>
+		<connection>scm:git:https://github.com/scifio/scifio-hdf5</connection>
 		<developerConnection>scm:git:git@github.com:scifio/scifio-hdf5</developerConnection>
 		<tag>HEAD</tag>
 		<url>https://github.com/scifio/scifio-hdf5</url>
