--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>28.0.0</version>
+		<version>31.1.0</version>
 		<relativePath />
 	</parent>
 
@@ -89,6 +89,7 @@
 		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 
 		<scifio.version>0.39.1</scifio.version>
+		<cisd.jhdf5.version>19.04.0</cisd.jhdf5.version>
 	</properties>
 
 	<repositories>
@@ -109,6 +110,7 @@
 		<dependency>
 			<groupId>cisd</groupId>
 			<artifactId>jhdf5</artifactId>
+			<version>${cisd.jhdf5.version}</version>
 		</dependency>
 	</dependencies>
 </project>
